--- a/ABRouterTest/ABRouterTest/Info.plist
+++ b/ABRouterTest/ABRouterTest/Info.plist
@@ -18,5 +18,18 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>ABRouter</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>abrouter</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
